--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,14 @@ kotlin = "1.9.23"
 kotlinx-serialization = "1.6.3"
 work-runtime-ktx = "2.9.0"
 
+publish-group = "com.github.chimbori.bugbear"
+publish-artifact = "bugbear"
+publish-version = "0.1.1"
+
+publish-name = "BugBear"
+publish-description = "BugBear is a privacy-friendly, minimalist, modern, extensible, wire-format compatible alternative to ACRA"
+publish-url = "https://github.com/chimbori/bugbear"
+
 [libraries]
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "work-runtime-ktx" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
